--- a/harness/cd/meta/k8s-rolling-pipeline.yaml
+++ b/harness/cd/meta/k8s-rolling-pipeline.yaml
@@ -257,7 +257,27 @@ pipeline:
   variables:
     - name: meta_project_name
       type: String
+      default: stock
       description: Phải có branch projects/NAME
       required: true
       value: <+input>.default(stock).allowedValues(stock,binance)
-      default: stock
+    - name: api
+      type: String
+      description: Có deploy API hay không?
+      required: true
+      value: <+input>.default(true).allowedValues(true,false)
+    - name: frontend
+      type: String
+      description: Có deploy Frontend hay không?
+      required: true
+      value: <+input>.default(false).allowedValues(true,false)
+    - name: api_request_instance
+      type: Number
+      description: Số lượng api request instance
+      required: true
+      value: <+input>.default(2)
+    - name: api_job_instance
+      type: Number
+      description: Số lượng api job instance
+      required: true
+      value: <+input>.default(2)
