--- a/harness/cd/meta/k8s-rolling-pipeline.yaml
+++ b/harness/cd/meta/k8s-rolling-pipeline.yaml
@@ -96,7 +96,7 @@ pipeline:
                         identifier: Git_Clone_Source
                         spec:
                           connectorRef: account.harnessImage
-                          image: alpine/git
+                          image: alpine/git:2.45.2
                           shell: Sh
                           command: |-
                             #!/bin/sh
