--- a/k8s/app/meta/templates/deployment.yaml
+++ b/k8s/app/meta/templates/deployment.yaml
@@ -30,12 +30,23 @@ spec:
       serviceAccountName: {{ include "meta.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
+
+      initContainers:
+        # First time after restart cluster always fail
+        - name: init-container-check-host-mounted-ebs-volume
+          image: busybox
+          command: [ 'sh', '-c', 'for i in $(seq 1 5); do echo "Checking attempt $i..."; if [ -f /host_ebs_volume/DONT_DELETE ]; then echo "File found, exiting successfully."; exit 0; fi; echo "File not found, retrying..."; sleep 10; done; echo "File not found after 5 attempts, exiting with error."; exit 1' ]
+          volumeMounts:
+            - name: host-volume
+              mountPath: /host_ebs_volume
+
       containers:
-        - name: {{ .Chart.Name }}
+        - name: api
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          command: {{ .Values.apiContainer.command }}
           ports:
             - name: http
               containerPort: {{ .Values.service.port }}
@@ -50,6 +61,40 @@ spec:
           volumeMounts:
             {{- toYaml . | nindent 12 }}
           {{- end }}
+          env:
+            - name: APP_NAME
+              value: request
+            - name: NODE_ENV
+              value: production
+            - name: CRON_ENABLE
+              value: "false"
+            - name: QUEUE_CONSUMER_ENABLE
+              value: "false"
+          workingDir: {{ .Values.apiContainer.apiWorkingDir }}
+
+        - name: job
+          securityContext:
+            {{- toYaml .Values.securityContext | nindent 12 }}
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
+          imagePullPolicy: {{ .Values.image.pullPolicy }}
+          command: {{ .Values.apiContainer.command }}
+          resources:
+            {{- toYaml .Values.resources | nindent 12 }}
+          {{- with .Values.volumeMounts }}
+          volumeMounts:
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
+          env:
+            - name: APP_NAME
+              value: job
+            - name: NODE_ENV
+              value: production
+            - name: CRON_ENABLE
+              value: "true"
+            - name: QUEUE_CONSUMER_ENABLE
+              value: "true"
+          workingDir: {{ .Values.apiContainer.apiWorkingDir }}
+
       {{- with .Values.volumes }}
       volumes:
         {{- toYaml . | nindent 8 }}
