--- a/harness/environment/k8s-helm-chart-infra.yaml
+++ b/harness/environment/k8s-helm-chart-infra.yaml
@@ -11,7 +11,6 @@ infrastructureDefinition:
   type: KubernetesDirect
   spec:
     connectorRef: harnessk8sconnector
-    namespace: <+pipeline.stages.Configuration.spec.execution.steps.Resolve_Configuration.output.outputVariables.project>
+    namespace: <+pipeline.stages.Configuration.spec.execution.steps.Resolve_Configuration.output.outputVariables.namespace>
     releaseName: release-<+INFRA_KEY_SHORT_ID>
   allowSimultaneousDeployments: false
-  scopedServices: []
