--- a/k8s/app/meta/values.yaml
+++ b/k8s/app/meta/values.yaml
@@ -38,14 +38,14 @@ podAnnotations: { }
 # For more information checkout: https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/
 podLabels: { }
 
-podSecurityContext:
-  allowPrivilegeEscalation: "false"
-  runAsNonRoot: "true"
-  runAsUser: 1000
-  runAsGroup: 1000
-  capabilities:
-    drop:
-      - ALL
+podSecurityContext: { }
+#  allowPrivilegeEscalation: "false"
+#  runAsNonRoot: "true"
+#  runAsUser: 1000
+#  runAsGroup: 1000
+#  capabilities:
+#    drop:
+#      - ALL
 
 securityContext: { }
   # capabilities:
