--- a/k8s/app/ggg-brand/values.yaml
+++ b/k8s/app/ggg-brand/values.yaml
@@ -85,17 +85,13 @@ ingress:
     - hosts:
         - brand-pcms.ggg.systems
 
-resources: { }
-  # We usually recommend not specifying default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-# lines, adjust them as necessary, and remove the curly braces after 'resources.'
-# Limits:
-#   cpu: 100m
-#   memory: 128Mi
-# requests:
-#   cpu: 100m
-#   memory: 128Mi
+resources:
+  Limits:
+    cpu: 1000m
+    memory: 2500Mi
+  requests:
+    cpu: 250m
+    memory: 500Mi
 
 # This is to setup the liveness and readiness probes more information can be found here: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/
 livenessProbe:
