--- a/k8s/app/meta/values.yaml
+++ b/k8s/app/meta/values.yaml
@@ -9,7 +9,7 @@ namespace: <+pipeline.stages.Configuration.spec.execution.steps.Resolve_Configur
 
 # This sets the container image more information can be found here: https://kubernetes.io/docs/concepts/containers/images/
 image:
-  repository: node
+  repository: vjcspy/node
   # This sets the pull policy for images.
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
@@ -40,22 +40,16 @@ podAnnotations: { }
 # For more information checkout: https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/
 podLabels: { }
 
-podSecurityContext: { }
-#  allowPrivilegeEscalation: "false"
-#  runAsNonRoot: "true"
-#  runAsUser: 1000
-#  runAsGroup: 1000
-#  capabilities:
-#    drop:
-#      - ALL
+podSecurityContext:
+  fsGroup: 1001
 
-securityContext: { }
-  # capabilities:
-  #   drop:
-  #   - ALL
-  # readOnlyRootFilesystem: true
-  # runAsNonRoot: true
-# runAsUser: 1000
+securityContext:
+  capabilities:
+    drop:
+      - ALL
+  readOnlyRootFilesystem: true
+  runAsNonRoot: true
+  runAsUser: 1001
 
 # This is for setting up a service more information can be found here: https://kubernetes.io/docs/concepts/services-networking/service/
 service:
@@ -69,7 +63,7 @@ ingress:
   enabled: false
   className: ""
   annotations: { }
-    # kubernetes.io/ingress.class: nginx
+  # kubernetes.io/ingress.class: nginx
   # kubernetes.io/tls-acme: "true"
   hosts:
     - host: chart-example.local
@@ -134,4 +128,10 @@ affinity: { }
 
 apiContainer:
   apiWorkingDir: /app/projects/<+pipeline.variables.meta_project_name>/apps/api
-  command: ["sh", "-c", "npm run start:prod"]
+  command: [ "/bin/sh" ]
+  args:
+    - "-c"
+    - |
+      echo "Starting application..."
+      cd /app
+      pnpm --filter @stock/apps-api start:prod
