feat: update Dockerfile

--- a/harness/cd/meta/k8s-rolling-pipeline.yaml
+++ b/harness/cd/meta/k8s-rolling-pipeline.yaml
@@ -195,7 +195,7 @@ pipeline:
                         identifier: Build
                         spec:
                           connectorRef: account.harnessImage
-                          image: vjcspy/node:20-pnpm
+                          image: vjcspy/node:20-pnpm-1
                           shell: Sh
                           command: |-
                             #!/bin/sh
