--- a/k8s/app/meta/templates/deployment.yaml
+++ b/k8s/app/meta/templates/deployment.yaml
@@ -95,6 +95,8 @@ spec:
               value: "true"
             - name: QUEUE_CONSUMER_ENABLE
               value: "true"
+            - name: APP_PORT
+              value: "3001"
           workingDir: {{ .Values.apiContainer.apiWorkingDir }}
 
       {{- with .Values.volumes }}
