feat: done ggg-api

--- a/k8s/app/ggg-api/templates/deployment.yaml
+++ b/k8s/app/ggg-api/templates/deployment.yaml
@@ -30,6 +30,14 @@ spec:
       serviceAccountName: {{ include "ggg-api.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
+      initContainers:
+        # First time after restart cluster always fail
+        - name: init-container-check-host-mounted-ebs-volume
+          image: busybox
+          command: [ 'sh', '-c', 'for i in $(seq 1 5); do echo "Checking attempt $i..."; if [ -f /host_ebs_volume/DONT_DELETE ]; then echo "File found, exiting successfully."; exit 0; fi; echo "File not found, retrying..."; sleep 10; done; echo "File not found after 5 attempts, exiting with error."; exit 1' ]
+          volumeMounts:
+            - name: host-volume
+              mountPath: /host_ebs_volume
       containers:
         - name: {{ .Chart.Name }}
           securityContext:
@@ -40,6 +48,13 @@ spec:
             - name: http
               containerPort: {{ .Values.service.port }}
               protocol: TCP
+          env:
+            - name: ENVIRONMENT
+              value: production
+            - name: NODE_ENV
+              value: production
+            - name: PORT
+              value: "2006"
           livenessProbe:
             {{- toYaml .Values.livenessProbe | nindent 12 }}
           readinessProbe:
