--- a/k8s/app/ggg-api/templates/ingress.yaml
+++ b/k8s/app/ggg-api/templates/ingress.yaml
@@ -20,7 +20,7 @@ spec:
         {{- range .hosts }}
         - {{ . | quote }}
         {{- end }}
-      secretName: {{ .secretName }}
+      secretName: {{ include "ggg-api.tlsSecretFullName" $ }}
     {{- end }}
   {{- end }}
   rules:
