--- a/k8s/app/meta/values.yaml
+++ b/k8s/app/meta/values.yaml
@@ -65,6 +65,7 @@ ingress:
   annotations:
     # Chỉ định Ingress class
     kubernetes.io/ingress-class: nginx
+    nginx.ingress.kubernetes.io/ssl-verify: "false"
 
     # Enable SSL redirect
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
