--- a/k8s/app/ggg-api/templates/deployment.yaml
+++ b/k8s/app/ggg-api/templates/deployment.yaml
@@ -4,6 +4,8 @@ metadata:
   name: {{ include "ggg-api.fullname" . }}
   labels:
     {{- include "ggg-api.labels" . | nindent 4 }}
+  annotations:
+    redeployTimestamp: "{{ now | unixEpoch }}"
 spec:
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
