--- a/k8s/app/ggg-api/templates/deployment.yaml
+++ b/k8s/app/ggg-api/templates/deployment.yaml
@@ -50,6 +50,9 @@ spec:
             - name: http
               containerPort: {{ .Values.service.port }}
               protocol: TCP
+          workingDir: {{ .Values.apiContainer.apiWorkingDir }}
+          command: {{ .Values.apiContainer.command }}
+          args: {{ .Values.apiContainer.args | toJson }}
           env:
             - name: ENVIRONMENT
               value: production
